--- a/Contra/05-SceneManager.vcxproj
+++ b/Contra/05-SceneManager.vcxproj
@@ -154,14 +154,19 @@
     <ClCompile Include="Animations.cpp" />
     <ClCompile Include="Brick.cpp" />
     <ClCompile Include="Bullet.cpp" />
+    <ClCompile Include="CGameBackground.cpp" />
     <ClCompile Include="CGameCharacter.cpp" />
+    <ClCompile Include="CGameFoe.cpp" />
     <ClCompile Include="CGameObjectBase.cpp" />
+    <ClCompile Include="CGamePlayer.cpp" />
+    <ClCompile Include="CGroundFoe.cpp" />
     <ClCompile Include="Coin.cpp" />
     <ClCompile Include="Collision.cpp" />
     <ClCompile Include="debug.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="Goomba.cpp" />
+    <ClCompile Include="GravityHandler.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Mario.cpp" />
     <ClCompile Include="Platform.cpp" />
@@ -180,14 +185,20 @@
     <ClInclude Include="AssetIDs.h" />
     <ClInclude Include="Brick.h" />
     <ClInclude Include="Bullet.h" />
+    <ClInclude Include="CConst.h" />
+    <ClInclude Include="CGameBackground.h" />
     <ClInclude Include="CGameCharacter.h" />
+    <ClInclude Include="CGameFoe.h" />
     <ClInclude Include="CGameObjectBase.h" />
+    <ClInclude Include="CGamePlayer.h" />
+    <ClInclude Include="CGroundFoe.h" />
     <ClInclude Include="Coin.h" />
     <ClInclude Include="Collision.h" />
     <ClInclude Include="debug.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="Goomba.h" />
+    <ClInclude Include="GravityHandler.h" />
     <ClInclude Include="KeyEventHandler.h" />
     <ClInclude Include="Mario.h" />
     <ClInclude Include="Platform.h" />
