Update Game's Classes.

--- a/Contra/05-SceneManager.vcxproj
+++ b/Contra/05-SceneManager.vcxproj
@@ -149,18 +149,23 @@
   <ItemGroup>
     <ClCompile Include="Animation.cpp" />
     <ClCompile Include="Animations.cpp" />
-    <ClCompile Include="BattleManager.cpp" />
     <ClCompile Include="Brick.cpp" />
     <ClCompile Include="Coin.cpp" />
     <ClCompile Include="Collision.cpp" />
     <ClCompile Include="debug.cpp" />
+    <ClCompile Include="Demo_Layer.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameObject.cpp" />
+    <ClCompile Include="Game_Blocker.cpp" />
     <ClCompile Include="Game_Character.cpp" />
-    <ClCompile Include="Game_Entity.cpp" />
-    <ClCompile Include="Game_Object.cpp" />
+    <ClCompile Include="Game_Collision.cpp" />
+    <ClCompile Include="Game_Layer.cpp" />
+    <ClCompile Include="Game_MovableObject.cpp" />
     <ClCompile Include="Game_ObjectBase.cpp" />
+    <ClCompile Include="Game_Platform.cpp" />
     <ClCompile Include="Game_Player.cpp" />
+    <ClCompile Include="Game_Screen.cpp" />
+    <ClCompile Include="Game_StaticObject.cpp" />
     <ClCompile Include="Game_Terrain.cpp" />
     <ClCompile Include="Goomba.cpp" />
     <ClCompile Include="main.cpp" />
@@ -169,6 +174,8 @@
     <ClCompile Include="PlayScene.cpp" />
     <ClCompile Include="Portal.cpp" />
     <ClCompile Include="SampleKeyEventHandler.cpp" />
+    <ClCompile Include="Scene_Base.cpp" />
+    <ClCompile Include="Scene_Battle.cpp" />
     <ClCompile Include="ScreenManager.cpp" />
     <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="Sprites.cpp" />
@@ -180,18 +187,23 @@
     <ClInclude Include="AnimationFrame.h" />
     <ClInclude Include="Animations.h" />
     <ClInclude Include="AssetIDs.h" />
-    <ClInclude Include="BattleManager.h" />
     <ClInclude Include="Brick.h" />
     <ClInclude Include="Coin.h" />
     <ClInclude Include="Collision.h" />
     <ClInclude Include="debug.h" />
+    <ClInclude Include="Demo_Layer.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameObject.h" />
+    <ClInclude Include="Game_Blocker.h" />
     <ClInclude Include="Game_Character.h" />
-    <ClInclude Include="Game_Entity.h" />
-    <ClInclude Include="Game_Object.h" />
+    <ClInclude Include="Game_Collision.h" />
+    <ClInclude Include="Game_Layer.h" />
+    <ClInclude Include="Game_MovableObject.h" />
     <ClInclude Include="Game_ObjectBase.h" />
+    <ClInclude Include="Game_Platform.h" />
     <ClInclude Include="Game_Player.h" />
+    <ClInclude Include="Game_Screen.h" />
+    <ClInclude Include="Game_StaticObject.h" />
     <ClInclude Include="Game_Terrain.h" />
     <ClInclude Include="Goomba.h" />
     <ClInclude Include="KeyEventHandler.h" />
@@ -201,6 +213,8 @@
     <ClInclude Include="Portal.h" />
     <ClInclude Include="SampleKeyEventHandler.h" />
     <ClInclude Include="Scene.h" />
+    <ClInclude Include="Scene_Base.h" />
+    <ClInclude Include="Scene_Battle.h" />
     <ClInclude Include="ScreenManager.h" />
     <ClInclude Include="Sprite.h" />
     <ClInclude Include="Sprites.h" />
