--- a/Contra/05-SceneManager.vcxproj
+++ b/Contra/05-SceneManager.vcxproj
@@ -228,7 +228,9 @@
     <Text Include="coin.txt" />
     <Text Include="contra-level.txt" />
     <Text Include="contra-scene01.txt" />
+    <Text Include="contra-scene02.txt" />
     <Text Include="contra.txt" />
+    <Text Include="ContraMapStage1BG.txt" />
     <Text Include="goomba.txt" />
     <Text Include="mario-sample.txt" />
     <Text Include="mario.txt" />
