--- a/Contra/05-SceneManager.vcxproj.filters
+++ b/Contra/05-SceneManager.vcxproj.filters
@@ -274,5 +274,11 @@
     <Text Include="contra-level.txt">
       <Filter>Resource Files</Filter>
     </Text>
+    <Text Include="ContraMapStage1BG.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
+    <Text Include="contra-scene02.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
